完成轮播的设计

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jianshu",
   "version": "1.0.0",
-  "description": "jianshu product",
-  "author": "lizhiyuan <148334733@qq.com>",
+  "description": "Nuxt.js project",
+  "author": "sheienheng <1377191465@qq.com>",
   "private": true,
   "scripts": {
     "dev": "backpack dev",
@@ -14,13 +14,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "^1.4.1",
+    "bootstrap-vue": "^2.0.0-rc.1",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "jquery": "^3.3.1",
-    "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "vue-awesome-swiper": "^3.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
